# markstream

./: .gitignore  CMakeLists.txt
include/: parser.hpp  token_stream.hpp
src/: parser.cpp
